--- a/index.html
+++ b/index.html
@@ -61,6 +61,44 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
+    }
+
+    .logo-area {
+      margin-bottom: 12px;
+    }
+
+    .logo {
+      font-size: 28px;
+      font-weight: 800;
+      color: #fff;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      padding: 8px 16px;
+      background: linear-gradient(135deg, rgba(255,255,255,0.1), rgba(255,255,255,0.05));
+      border-radius: 8px;
+      display: inline-block;
+      border: 2px solid rgba(255,255,255,0.3);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .logo::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+      animation: shine 3s infinite;
+    }
+
+    @keyframes shine {
+      0% { left: -100%; }
+      20% { left: 100%; }
+      100% { left: 100%; }
     }
 
     h1 {
@@ -332,6 +370,10 @@
         font-size: 14px;
       }
 
+      .logo {
+        font-size: 24px;
+      }
+
       .control-panel {
         padding: 16px;
       }
@@ -381,6 +423,11 @@
         font-size: 13px;
       }
 
+      .logo {
+        font-size: 20px;
+        padding: 6px 12px;
+      }
+
       .button-group {
         justify-content: center;
       }
@@ -395,9 +442,12 @@
   <header>
     <div class="container">
       <div class="header-content">
+        <div class="logo-area">
+          <div class="logo">JUSTICE DataLAB</div>
+        </div>
         <div>
-          <h1>📊 경기도 교육감 선거 득표차 타임라인 매핑</h1>
-          <p class="subtitle">진보-보수 득표 차이로 보는 구시군 지역민 선호도 (2014·2018·2022)</p>
+          <h1>📊 경기도 교육감 선거 득표차 시계열 지도</h1>
+          <p class="subtitle">진보-보수 득표 차이로 보는 경기도 지역별 교육 정책 선호도 (2014·2018·2022)</p>
         </div>
       </div>
     </div>
@@ -408,16 +458,18 @@
       <div class="control-section">
         <div class="section-title">연도 선택</div>
         <div class="button-group">
-          <button class="year-button active" data-year="0">2014년</button>
-          <button class="year-button" data-year="1">2018년</button>
-          <button class="year-button" data-year="2">2022년</button>
+          <!-- 변경 -->
+            <button class="year-button active" data-year="0">2010년</button>
+            <button class="year-button" data-year="1">2014년</button>
+            <button class="year-button" data-year="2">2018년</button>
+            <button class="year-button" data-year="3">2022년</button>
         </div>
       </div>
 
       <div class="control-section">
         <div class="slider-container">
           <div class="slider-wrap">
-            <input type="range" id="yearSlider" min="0" max="2" value="0" step="1">
+            <input type="range" id="yearSlider" min="0" max="3" value="0" step="1">
           </div>
           <div class="year-navigation">
             <button id="prevYear" class="nav-button" disabled>
@@ -438,16 +490,16 @@
         <span>분석 개요</span>
       </div>
       <div class="info-content">
-        이 시각화는 역대 경기도교육감 선거에서 진보와 보수 진영 후보 간의 득표 차이를 지도에 표현한 것입니다. 
-        진보 성향 득표율이 높은 지역은 파란색, 보수 성향 득표율이 높은 지역은 붉은색에 가깝습니다. 
-        연도별로 변화하는 지역 패턴을 통해 경기도 구시군 지역민의 진보, 보수 후보 지지도 변화를 분석할 수 있습니다.
+        이 시각화는 경기도 교육감 선거에서 진보와 보수 진영 후보 간의 득표 차이를 지도에 표현한 것입니다. 진보 성향 득표율이 높은 지역은 파란색, 보수 성향 득표율이 높은 지역은 붉은색으로 표시되어 있습니다. 연도별로 변화하는 지역 패턴을 통해 경기도 내 교육 정책 선호도의 변화를 분석할 수 있습니다.
       </div>
     </div>
 
     <div class="map-container" id="mapContainer">
-      <iframe id="map2014" src="./경기도_진영차이_2014.html" class="map-frame active" allowfullscreen></iframe>
-      <iframe id="map2018" src="./경기도_진영차이_2018.html" class="map-frame" allowfullscreen></iframe>
-      <iframe id="map2022" src="./경기도_진영차이_2022.html" class="map-frame" allowfullscreen></iframe>
+    <!-- 변경 -->
+        <iframe id="map2010" src="./경기도_진영차이_2010.html" class="map-frame active" allowfullscreen></iframe>
+        <iframe id="map2014" src="./경기도_진영차이_2014.html" class="map-frame" allowfullscreen></iframe>
+        <iframe id="map2018" src="./경기도_진영차이_2018.html" class="map-frame" allowfullscreen></iframe>
+        <iframe id="map2022" src="./경기도_진영차이_2022.html" class="map-frame" allowfullscreen></iframe>
     </div>
 
     <div class="legend">
@@ -467,13 +519,13 @@
 
   <footer class="footer">
     <div class="container">
-      &copy; 2025 ⓒDataLAB by Carl | 모든 데이터는 공식 선거 결과를 기반으로 합니다. 실수가 있을 수 있습니다.
+      &copy; 2025 ⓒJUSTICE DataLAB by Carl | 모든 데이터는 공식 선거 결과를 기반으로 합니다
     </div>
   </footer>
 
   <script>
     // 상수 및 변수 정의
-    const yearLabels = ['2014년', '2018년', '2022년'];
+    const yearLabels = ['2010년', '2014년', '2018년', '2022년'];
     const mapFrames = Array.from(document.querySelectorAll('.map-frame'));
     const yearButtons = Array.from(document.querySelectorAll('.year-button'));
     const yearSlider = document.getElementById('yearSlider');
@@ -509,7 +561,7 @@
 
       // 이전/다음 버튼 상태 업데이트
       prevYearBtn.disabled = idx === 0;
-      nextYearBtn.disabled = idx === 2;
+      nextYearBtn.disabled = idx === 3;
     }
 
     // 이전 연도로 이동
