--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
       <div class="info-content">
         이 시각화는 경기도 교육감 선거에서 진보와 보수 진영 후보 간의 득표 차이를 지도에 표현한 것입니다. 
         진보 성향 후보의 득표율이 높은 지역은 파란색, 보수 성향 득표율이 높은 지역은 붉은색으로 표시되어 있습니다. 
-        연도별로 변화하는 지역 패턴을 통해 경기도 내 지역별 진보, 보수 호부에 대한 선호도 변화를 분석할 수 있습니다.
+        연도별로 변화하는 지역 패턴을 통해 경기도 내 지역별 진보, 보수 후보에 대한 선호도 변화를 분석할 수 있습니다.
       </div>
     </div>
 
