--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
     <div class="container">
       <div class="header-content">
         <div class="logo-area">
-          <div class="logo">JUSTICE DataLAB</div>
+          <div class="logo">Insight-DataLAB</div>
         </div>
         <div>
           <h1>📊 경기도 교육감 선거 득표차 시계열 지도</h1>
@@ -521,7 +521,7 @@
 
   <footer class="footer">
     <div class="container">
-      &copy; 2025 ⓒJUSTICE DataLAB by Carl | 모든 데이터는 공식 선거 결과를 기반으로 합니다
+      &copy; 2025 ⓒInsight-DataLAB by Carl | 모든 데이터는 공식 선거 결과를 기반으로 합니다
     </div>
   </footer>
 
