--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
     input[type="range"] {
       flex: 1;
       height: 6px;
-      -webkit-appearance: none;
+      appearance: none;           /* 표준 */
+      -webkit-appearance: none;   /* Safari/Chrome */
+      -moz-appearance: none;      /* Firefox */
       width: 100%;
       border-radius: 5px;
       background: var(--gray);
@@ -435,6 +437,26 @@
       .map-container {
         height: 350px;
       }
+      @media (max-width: 768px) {
+      .legend {
+        width: 90% !important;
+        margin: 0 auto 24px;
+        }
+      .scale-labels {
+        font-size: 12px;
+        flex-direction: row;
+        justify-content: space-between;
+        }
+      }
+      @media (max-width: 480px) {
+      .legend {
+        width: 95% !important;
+        padding: 12px;
+        }
+      .scale-labels {
+        font-size: 11px;
+        }
+      }
     }
   </style>
 </head>
@@ -443,7 +465,7 @@
     <div class="container">
       <div class="header-content">
         <div class="logo-area">
-          <div class="logo">Insight-DataLAB</div>
+          <div class="logo">Insight Data LAB</div>
         </div>
         <div>
           <h1>📊 경기도 교육감 선거 득표차 시계열 지도</h1>
@@ -490,9 +512,7 @@
         <span>분석 개요</span>
       </div>
       <div class="info-content">
-        이 시각화는 경기도 교육감 선거에서 진보와 보수 진영 후보 간의 득표 차이를 지도에 표현한 것입니다. 
-        진보 성향 후보의 득표율이 높은 지역은 파란색, 보수 성향 득표율이 높은 지역은 붉은색으로 표시되어 있습니다. 
-        연도별로 변화하는 지역 패턴을 통해 경기도 내 지역별 진보, 보수 후보에 대한 선호도 변화를 분석할 수 있습니다.
+        이 시각화는 경기도 교육감 선거에서 진보와 보수 진영 후보 간의 득표 차이를 지도에 표현한 것입니다. 진보 성향 득표율이 높은 지역은 파란색, 보수 성향 득표율이 높은 지역은 붉은색으로 표시되어 있습니다. 연도별로 변화하는 지역 패턴을 통해 경기도 내 교육 정책 선호도의 변화를 분석할 수 있습니다.
       </div>
     </div>
 
@@ -521,7 +541,7 @@
 
   <footer class="footer">
     <div class="container">
-      &copy; 2025 ⓒInsight-DataLAB by Carl | 모든 데이터는 공식 선거 결과를 기반으로 합니다
+      &copy; 2025 ⓒInsight Data LAB by Carl | 모든 데이터는 공식 선거 결과를 기반으로 합니다
     </div>
   </footer>
 
